--- a/sos/select/index.html
+++ b/sos/select/index.html
@@ -32,7 +32,16 @@
                 coming soon
             </section>
             <section id="output">
-                <div></div>
+                <select>
+                    <option>Option 1</option>
+                    <option>Option 2</option>
+                    <option>Option 3</option>
+                </select>
+                <select disabled>
+                    <option>Option 1</option>
+                    <option>Option 2</option>
+                    <option>Option 3</option>
+                </select>
             </section>
             <button onclick="random()">random</button>
             <button onclick="clipboard()">clipboard</button>
