--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="./sos/icon/index.html">icon</a>
             <a href="./sos/range/index.html">range</a>
             <a href="./sos/scrollbar/index.html">scrollbar</a>
+            <a href="../../sos/select/index.html">select</a>
             <a href="./sos/switch/index.html">switch</a>
         </nav>
         <main>
