--- a/sos/switch/index.html
+++ b/sos/switch/index.html
@@ -41,6 +41,8 @@
                 <input id="trackColor" type="color">
                 <label>track border color</label>
                 <input id="trackBorderColor" type="color">
+                <label>track active color</label>
+                <input id="trackActiveColor" type="color">
                 <label>thumb width</label>
                 <input id="thumbWidth" type="range" min="5" max="30">
                 <label>thumb height</label>
