cleanup + add progress

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="./sos/checkbox/index.html">checkbox</a>
             <a href="./sos/gradient/index.html">gradient</a>
             <a href="./sos/icon/index.html">icon</a>
+            <a href="../../sos/progress/index.html">progress</a>
             <a href="./sos/range/index.html">range</a>
             <a href="./sos/scrollbar/index.html">scrollbar</a>
             <a href="../../sos/select/index.html">select</a>
