--- a/sos/checkbox/index.html
+++ b/sos/checkbox/index.html
@@ -22,6 +22,7 @@
             <a href="../../sos/checkbox/index.html">checkbox</a>
             <a href="../../sos/gradient/index.html">gradient</a>
             <a href="../../sos/icon/index.html">icon</a>
+            <a href="../../sos/progress/index.html">progress</a>
             <a href="../../sos/range/index.html">range</a>
             <a href="../../sos/scrollbar/index.html">scrollbar</a>
             <a href="../../sos/select/index.html">select</a>
@@ -50,6 +51,7 @@
                 <input id="checkWidth" type="range" min="1" max="10" />
                 <label>check color</label>
                 <input id="checkColor" type="color" />
+                <p>see also: <a href="../switch/index.html">switch</a></p>
             </section>
             <section id="output">
                 <input type="checkbox" />
