--- a/sos/switch/index.html
+++ b/sos/switch/index.html
@@ -22,6 +22,7 @@
             <a href="../../sos/checkbox/index.html">checkbox</a>
             <a href="../../sos/gradient/index.html">gradient</a>
             <a href="../../sos/icon/index.html">icon</a>
+            <a href="../../sos/progress/index.html">progress</a>
             <a href="../../sos/range/index.html">range</a>
             <a href="../../sos/scrollbar/index.html">scrollbar</a>
             <a href="../../sos/select/index.html">select</a>
@@ -55,6 +56,7 @@
                 <input id="thumbColor" type="color">
                 <label>thumb border color</label>
                 <input id="thumbBorderColor" type="color">
+                <p>see also: <a href="../checkbox/index.html">checkbox</a></p>
             </section>
             <section id="output">
                 <input type="checkbox" />
