--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <a href="./sos/checkbox/index.html">checkbox</a>
             <a href="./sos/gradient/index.html">gradient</a>
             <a href="./sos/icon/index.html">icon</a>
-            <a href="../../sos/progress/index.html">progress</a>
+            <a href="./sos/progress/index.html">progress</a>
             <a href="./sos/range/index.html">range</a>
             <a href="./sos/scrollbar/index.html">scrollbar</a>
-            <a href="../../sos/select/index.html">select</a>
+            <a href="./sos/select/index.html">select</a>
             <a href="./sos/switch/index.html">switch</a>
         </nav>
         <main>
