--- a/sos/gradient/index.html
+++ b/sos/gradient/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
     <head>
-        <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=0'>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+        <title>css-sos-gradient</title>
+        <meta name=description content="cross-browser pure CSS Generator for gradient element">
 
         <link rel="stylesheet" type="text/css" href="../../styles/themes.css">
         <link rel="stylesheet" type="text/css" href="../../styles/index.css">
