--- a/sos/scrollbar/index.html
+++ b/sos/scrollbar/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
     <head>
-        <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=0'>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+        <title>css-sos-scrollbar</title>
+        <meta name=description content="cross-browser pure CSS Generator for scrollbar element">
 
         <link rel="stylesheet" type="text/css" href="../../styles/themes.css">
         <link rel="stylesheet" type="text/css" href="../../styles/index.css">
@@ -30,14 +33,14 @@
         </nav>
         <main>
             <section id="controls">
-                <label>track style</label>
+                <label for="trackStyle">track style</label>
                 <div>
                     <input id="trackStyleThin" type="radio" name="trackStyle">
                     <input id="trackStyleThick" type="radio" name="trackStyle">
                 </div>
-                <label>track color</label>
+                <label for="trackColor">track color</label>
                 <input id="trackColor" type="color">
-                <label>thumb color</label>
+                <label for="thumbColor">thumb color</label>
                 <input id="thumbColor" type="color">
             </section>
             <section id="output">
