--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
     <head>
-        <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=0'>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+        <title>css-sos</title>
+        <meta name=description content="Homescreen for diffrent cross-browser pure CSS Generators">
 
         <link rel="stylesheet" type="text/css" href="./styles/themes.css">
         <link rel="stylesheet" type="text/css" href="./styles/index.css">
@@ -19,11 +22,10 @@
             <a href="./sos/select/index.html">select</a>
             <a href="./sos/switch/index.html">switch</a>
         </nav>
-        <main>
-            <section id="controls">
-                Need help with css, then this website is for you!
-            </section>
-            <section id="output"></section>
+        <main style="display: flex; justify-content: center; align-items: center;font-size: x-large;">
+            Need help with css, then this website is for you!
+            <br>
+            It's all pure CSS!
         </main>
         <footer>created by AntVil</footer>
     </body>
