add switch offset + emoji

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <a href="./sos/select/index.html">select</a>
             <a href="./sos/switch/index.html">switch</a>
         </nav>
-        <main style="display: flex; justify-content: center; align-items: center;font-size: x-large;">
+        <main style="display: flex; justify-content: center; align-items: center;font-size: x-large;text-align: center;">
             Need help with css, then this website is for you!
             <br>
-            It's all pure CSS!
+            It's all pure CSS!✨
         </main>
         <footer>created by AntVil</footer>
     </body>
