--- a/sos/switch/index.html
+++ b/sos/switch/index.html
@@ -53,6 +53,8 @@
                 <input id="thumbHeight" type="range" min="5" max="30">
                 <label for="thumbBorderWidth">thumb border width</label>
                 <input id="thumbBorderWidth" type="range" min="0" max="10">
+                <label for="thumbOffset">thumb offset</label>
+                <input id="thumbOffset" type="range" min="0" max="30">
                 <label for="thumbBorderRadius">thumb border radius</label>
                 <input id="thumbBorderRadius" type="range" min="0" max="30">
                 <label for="thumbColor">thumb color</label>
