home navigation + page icon

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta name='viewport' content='width=device-width, initial-scale=1'>
 
         <title>css-sos</title>
+        <link rel="icon" href="./icon.svg">
         <meta name=description content="Homescreen for diffrent cross-browser pure CSS Generators">
 
         <link rel="stylesheet" type="text/css" href="./styles/themes.css">
         <link rel="stylesheet" type="text/css" href="./styles/index.css">
     </head>
     <body>
-        <header><h1>css-sos</h1></header>
+        <header><h1><a href="../../index.html">css-sos</a></h1></header>
         <nav>
             <a href="./sos/button/index.html">button</a>
             <a href="./sos/checkbox/index.html">checkbox</a>
