--- a/sos/scrollbar/index.html
+++ b/sos/scrollbar/index.html
@@ -4,6 +4,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1'>
 
         <title>css-sos-scrollbar</title>
+        <link rel="icon" href="../../icon.svg">
         <meta name=description content="cross-browser pure CSS Generator for scrollbar element">
 
         <link rel="stylesheet" type="text/css" href="../../styles/themes.css">
@@ -18,7 +19,7 @@
     </head>
     <body>
         <header>
-            <h1>css-sos</h1>
+            <h1><a href="../../index.html">css-sos</a></h1>
         </header>
         <nav>
             <a href="../../sos/button/index.html">button</a>
