--- a/sos/switch/index.html
+++ b/sos/switch/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <header>
-            <h1><a href="./index.html"></a>css-sos</a></h1>
+            <h1><a href="../../index.html">css-sos</a></h1>
         </header>
         <nav>
             <a href="../../sos/button/index.html">button</a>
