--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="./styles/index.css">
     </head>
     <body>
-        <header><h1><a href="../../index.html">css-sos</a></h1></header>
+        <header><h1><a href="./index.html">css-sos</a></h1></header>
         <nav>
             <a href="./sos/button/index.html">button</a>
             <a href="./sos/checkbox/index.html">checkbox</a>
