--- a/sos/select/index.html
+++ b/sos/select/index.html
@@ -34,15 +34,38 @@
         </nav>
         <main>
             <section id="controls">
-                coming soon
+                <label for="selectWidth">select width</label>
+                <input id="selectWidth" type="range" min="90" max="150">
+                <label for="selectHeight">select height</label>
+                <input id="selectHeight" type="range" min="20" max="40">
+                <label for="selectBorderWidth">select border width</label>
+                <input id="selectBorderWidth" type="range" min="0" max="10">
+                <label for="selectBorderRadius">select border radius</label>
+                <input id="selectBorderRadius" type="range" min="0" max="30">
+                <label for="selectColor">select color</label>
+                <input id="selectColor" type="color">
+                <label for="selectBorderColor">select border color</label>
+                <input id="selectBorderColor" type="color">
+                <label for="selectFontColor">select font color</label>
+                <input id="selectFontColor" type="color">
+                <label for="arrowSize">arrow size</label>
+                <input id="arrowSize" type="range" min="5" max="30">
+                <label for="arrowColor">arrow color</label>
+                <input id="arrowColor" type="color">
+                <label for="arrowBackgroundWidth">arrow background size</label>
+                <input id="arrowBackgroundWidth" type="range" min="5" max="60">
+                <label for="arrowBackgroundColor">arrow background color</label>
+                <input id="arrowBackgroundColor" type="color">
             </section>
             <section id="output">
-                <select>
+                <label for="output0">select</label>
+                <select id="output0">
                     <option>Option 1</option>
                     <option>Option 2</option>
                     <option>Option 3</option>
                 </select>
-                <select disabled>
+                <label for="output1">disabled select</label>
+                <select id="output1" disabled>
                     <option>Option 1</option>
                     <option>Option 2</option>
                     <option>Option 3</option>
