add select arrow options

--- a/sos/select/index.html
+++ b/sos/select/index.html
@@ -35,7 +35,7 @@
         <main>
             <section id="controls">
                 <label for="selectWidth">select width</label>
-                <input id="selectWidth" type="range" min="90" max="150">
+                <input id="selectWidth" type="range" min="100" max="150">
                 <label for="selectHeight">select height</label>
                 <input id="selectHeight" type="range" min="20" max="40">
                 <label for="selectBorderWidth">select border width</label>
@@ -48,8 +48,15 @@
                 <input id="selectBorderColor" type="color">
                 <label for="selectFontColor">select font color</label>
                 <input id="selectFontColor" type="color">
-                <label for="arrowSize">arrow size</label>
-                <input id="arrowSize" type="range" min="5" max="30">
+                <label for="arrowIcon">arrow icon</label>
+                <div>
+                    <input id="arrowIconCorner" type="radio" name="arrowIcon" checked>
+                    <input id="arrowIconTriangle" type="radio" name="arrowIcon">
+                </div>
+                <label for="arrowXSize">arrow x size</label>
+                <input id="arrowXSize" type="range" min="3" max="12">
+                <label for="arrowYSize">arrow y size</label>
+                <input id="arrowYSize" type="range" min="3" max="12">
                 <label for="arrowColor">arrow color</label>
                 <input id="arrowColor" type="color">
                 <label for="arrowBackgroundWidth">arrow background size</label>
