--- a/sos/scrollbar/index.html
+++ b/sos/scrollbar/index.html
@@ -36,7 +36,7 @@
             <section id="controls">
                 <label for="trackStyle">track style</label>
                 <div>
-                    <input id="trackStyleThin" type="radio" name="trackStyle">
+                    <input id="trackStyleThin" type="radio" name="trackStyle" checked>
                     <input id="trackStyleThick" type="radio" name="trackStyle">
                 </div>
                 <label for="trackColor">track color</label>
