--- a/sos/select/index.html
+++ b/sos/select/index.html
@@ -54,13 +54,15 @@
                     <input id="arrowIconTriangle" type="radio" name="arrowIcon">
                 </div>
                 <label for="arrowXSize">arrow x size</label>
-                <input id="arrowXSize" type="range" min="3" max="12">
+                <input id="arrowXSize" type="range" min="5" max="15">
                 <label for="arrowYSize">arrow y size</label>
-                <input id="arrowYSize" type="range" min="3" max="12">
+                <input id="arrowYSize" type="range" min="5" max="15">
+                <label for="arrowWidth">arrow width</label>
+                <input id="arrowWidth" type="range" min="1" max="5">
                 <label for="arrowColor">arrow color</label>
                 <input id="arrowColor" type="color">
                 <label for="arrowBackgroundWidth">arrow background size</label>
-                <input id="arrowBackgroundWidth" type="range" min="5" max="60">
+                <input id="arrowBackgroundWidth" type="range" min="10" max="60">
                 <label for="arrowBackgroundColor">arrow background color</label>
                 <input id="arrowBackgroundColor" type="color">
             </section>
