add hover + better replace

--- a/sos/checkbox/index.html
+++ b/sos/checkbox/index.html
@@ -55,6 +55,8 @@
                 <input id="checkWidth" type="range" min="1" max="10" />
                 <label for="checkColor">check color</label>
                 <input id="checkColor" type="color" />
+                <label for="checkHoverColor">check hover color</label>
+                <input id="checkHoverColor" type="color" />
                 <p>see also: <a href="../switch/index.html">switch</a></p>
             </section>
             <section id="output">
