--- a/sos/progress/index.html
+++ b/sos/progress/index.html
@@ -58,8 +58,12 @@
                 <input id="thumbColor" type="color">
                 <label for="thumbBorderColor">thumb border color</label>
                 <input id="thumbBorderColor" type="color">
+                <label for="thumbHoverColor">thumb hover color</label>
+                <input id="thumbHoverColor" type="color" />
                 <label for="progressColor">progress color</label>
                 <input id="progressColor" type="color">
+                <label for="progressHoverColor">progress hover color</label>
+                <input id="progressHoverColor" type="color" />
 
                 <p><i>caution: in webkit browsers (chrome, edge, opera, safari) border-radius for progressbar not possible without cutting thumb, choose big enough track border or no track border-radius</i></p>
                 <p>see also: <a href="../range/index.html">range</a></p>
