--- a/sos/range/index.html
+++ b/sos/range/index.html
@@ -58,6 +58,8 @@
                 <input id="thumbColor" type="color">
                 <label for="thumbBorderColor">thumb border color</label>
                 <input id="thumbBorderColor" type="color">
+                <label for="thumbHoverColor">thumb hover color</label>
+                <input id="thumbHoverColor" type="color" />
                 <p>see also: <a href="../progress/index.html">progress</a></p>
             </section>
             <section id="output">
