--- a/sos/switch/index.html
+++ b/sos/switch/index.html
@@ -62,6 +62,8 @@
                 <input id="thumbColor" type="color">
                 <label for="thumbBorderColor">thumb border color</label>
                 <input id="thumbBorderColor" type="color">
+                <label for="thumbHoverColor">thumb hover color</label>
+                <input id="thumbHoverColor" type="color" />
                 <p>see also: <a href="../checkbox/index.html">checkbox</a></p>
             </section>
             <section id="output">
