--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <header><h1><a href="./index.html">css-sos</a></h1></header>
         <nav>
             <a href="./sos/button/index.html">button</a>
+            <a href="./sos/color/index.html">color</a>
             <a href="./sos/checkbox/index.html">checkbox</a>
             <a href="./sos/gradient/index.html">gradient</a>
             <a href="./sos/icon/index.html">icon</a>
