--- a/sos/gradient/index.html
+++ b/sos/gradient/index.html
@@ -11,9 +11,9 @@
         <link rel="stylesheet" type="text/css" href="../../styles/index.css">
         <link rel="stylesheet" type="text/css" href="./index.css">
 
-        <script src="../../scripts/index.js"></script>
-        <script src="../../scripts/util.js"></script>
-        <script src="./index.js"></script>
+        <script defer src="../../scripts/index.js"></script>
+        <script defer src="../../scripts/util.js"></script>
+        <script defer src="./index.js"></script>
 
         <style id="sos"></style>
     </head>
