--- a/sos/color/index.html
+++ b/sos/color/index.html
@@ -48,9 +48,9 @@
             </section>
             <section id="output">
                 <label for="output0">color</label>
-                <input id="output0" type="color" value="#F00" />
+                <input id="output0" type="color" value="#FF0000" />
                 <label for="output1">disabled color</label>
-                <input id="output1" type="color" value="#F00" disabled />
+                <input id="output1" type="color" value="#FF0000" disabled />
             </section>
             <button onclick="random()">random</button>
             <button onclick="clipboard()">clipboard</button>
