--- a/sos/color/index.html
+++ b/sos/color/index.html
@@ -36,15 +36,15 @@
         <main>
             <section id="controls">
                 <label for="pickerWidth">picker width</label>
-                <input id="pickerWidth" type="range" min="15" max="120">
+                <input id="pickerWidth" type="range" min="15" max="120" />
                 <label for="pickerHeight">picker height</label>
-                <input id="pickerHeight" type="range" min="15" max="30">
+                <input id="pickerHeight" type="range" min="15" max="30" />
                 <label for="pickerBorderWidth">picker border width</label>
-                <input id="pickerBorderWidth" type="range" min="0" max="5">
+                <input id="pickerBorderWidth" type="range" min="0" max="5" />
                 <label for="pickerBorderRadius">picker border radius</label>
-                <input id="pickerBorderRadius" type="range" min="0" max="10">
+                <input id="pickerBorderRadius" type="range" min="0" max="10" />
                 <label for="pickerBorderColor">picker border color</label>
-                <input id="pickerBorderColor" type="color">
+                <input id="pickerBorderColor" type="color" />
             </section>
             <section id="output">
                 <label for="output0">color</label>
