--- a/sos/switch/index.html
+++ b/sos/switch/index.html
@@ -36,33 +36,33 @@
         <main>
             <section id="controls">
                 <label for="trackWidth">track width</label>
-                <input id="trackWidth" type="range" min="30" max="60">
+                <input id="trackWidth" type="range" min="30" max="60" />
                 <label for="trackHeight">track height</label>
-                <input id="trackHeight" type="range" min="5" max="30">
+                <input id="trackHeight" type="range" min="5" max="30" />
                 <label for="trackBorderWidth">track border width</label>
-                <input id="trackBorderWidth" type="range" min="0" max="10">
+                <input id="trackBorderWidth" type="range" min="0" max="10" />
                 <label for="trackBorderRadius">track border radius</label>
-                <input id="trackBorderRadius" type="range" min="0" max="30">
+                <input id="trackBorderRadius" type="range" min="0" max="30" />
                 <label for="trackColor">track color</label>
-                <input id="trackColor" type="color">
+                <input id="trackColor" type="color" />
                 <label for="trackBorderColor">track border color</label>
-                <input id="trackBorderColor" type="color">
+                <input id="trackBorderColor" type="color" />
                 <label for="trackActiveColor">track active color</label>
-                <input id="trackActiveColor" type="color">
+                <input id="trackActiveColor" type="color" />
                 <label for="thumbWidth">thumb width</label>
-                <input id="thumbWidth" type="range" min="5" max="30">
+                <input id="thumbWidth" type="range" min="5" max="30" />
                 <label for="thumbHeight">thumb height</label>
-                <input id="thumbHeight" type="range" min="5" max="30">
+                <input id="thumbHeight" type="range" min="5" max="30" />
                 <label for="thumbBorderWidth">thumb border width</label>
-                <input id="thumbBorderWidth" type="range" min="0" max="10">
+                <input id="thumbBorderWidth" type="range" min="0" max="10" />
                 <label for="thumbOffset">thumb offset</label>
-                <input id="thumbOffset" type="range" min="0" max="30">
+                <input id="thumbOffset" type="range" min="0" max="30" />
                 <label for="thumbBorderRadius">thumb border radius</label>
-                <input id="thumbBorderRadius" type="range" min="0" max="30">
+                <input id="thumbBorderRadius" type="range" min="0" max="30" />
                 <label for="thumbColor">thumb color</label>
-                <input id="thumbColor" type="color">
+                <input id="thumbColor" type="color" />
                 <label for="thumbBorderColor">thumb border color</label>
-                <input id="thumbBorderColor" type="color">
+                <input id="thumbBorderColor" type="color" />
                 <label for="thumbHoverColor">thumb hover color</label>
                 <input id="thumbHoverColor" type="color" />
                 <p>see also: <a href="../checkbox/index.html">checkbox</a></p>
