--- a/sos/scrollbar/index.html
+++ b/sos/scrollbar/index.html
@@ -38,12 +38,12 @@
                 <label for="trackStyle">track style</label>
                 <div>
                     <input id="trackStyleThin" type="radio" name="trackStyle" checked>
-                    <input id="trackStyleThick" type="radio" name="trackStyle">
+                    <input id="trackStyleThick" type="radio" name="trackStyle" />
                 </div>
                 <label for="trackColor">track color</label>
-                <input id="trackColor" type="color">
+                <input id="trackColor" type="color" />
                 <label for="thumbColor">thumb color</label>
-                <input id="thumbColor" type="color">
+                <input id="thumbColor" type="color" />
             </section>
             <section id="output">
                 <div class="scroll" style="width: 180px;height: 100px;">
