--- a/sos/select/index.html
+++ b/sos/select/index.html
@@ -36,40 +36,40 @@
         <main>
             <section id="controls">
                 <label for="selectWidth">select width</label>
-                <input id="selectWidth" type="range" min="100" max="150">
+                <input id="selectWidth" type="range" min="100" max="150" />
                 <label for="selectHeight">select height</label>
-                <input id="selectHeight" type="range" min="20" max="40">
+                <input id="selectHeight" type="range" min="20" max="40" />
                 <label for="selectBorderWidth">select border width</label>
-                <input id="selectBorderWidth" type="range" min="0" max="10">
+                <input id="selectBorderWidth" type="range" min="0" max="10" />
                 <label for="selectBorderRadius">select border radius</label>
-                <input id="selectBorderRadius" type="range" min="0" max="30">
+                <input id="selectBorderRadius" type="range" min="0" max="30" />
                 <label for="selectColor">select color</label>
-                <input id="selectColor" type="color">
+                <input id="selectColor" type="color" />
                 <label for="selectBorderColor">select border color</label>
-                <input id="selectBorderColor" type="color">
+                <input id="selectBorderColor" type="color" />
                 <label for="selectFontColor">select font color</label>
-                <input id="selectFontColor" type="color">
+                <input id="selectFontColor" type="color" />
                 <label for="selectHoverColor">select hover color</label>
-                <input id="selectHoverColor" type="color">
+                <input id="selectHoverColor" type="color" />
                 <label for="arrowIcon">arrow icon</label>
                 <div>
                     <input id="arrowIconCorner" type="radio" name="arrowIcon" checked>
-                    <input id="arrowIconTriangle" type="radio" name="arrowIcon">
+                    <input id="arrowIconTriangle" type="radio" name="arrowIcon" />
                 </div>
                 <label for="arrowXSize">arrow x size</label>
-                <input id="arrowXSize" type="range" min="3" max="15">
+                <input id="arrowXSize" type="range" min="3" max="15" />
                 <label for="arrowYSize">arrow y size</label>
-                <input id="arrowYSize" type="range" min="3" max="15">
+                <input id="arrowYSize" type="range" min="3" max="15" />
                 <label for="arrowWidth">arrow width</label>
-                <input id="arrowWidth" type="range" min="1" max="5">
+                <input id="arrowWidth" type="range" min="1" max="5" />
                 <label for="arrowColor">arrow color</label>
-                <input id="arrowColor" type="color">
+                <input id="arrowColor" type="color" />
                 <label for="arrowHoverColor">arrow hover color</label>
-                <input id="arrowHoverColor" type="color">
+                <input id="arrowHoverColor" type="color" />
                 <label for="arrowBackgroundWidth">arrow background size</label>
-                <input id="arrowBackgroundWidth" type="range" min="10" max="60">
+                <input id="arrowBackgroundWidth" type="range" min="10" max="60" />
                 <label for="arrowBackgroundColor">arrow background color</label>
-                <input id="arrowBackgroundColor" type="color">
+                <input id="arrowBackgroundColor" type="color" />
             </section>
             <section id="output">
                 <label for="output0">select</label>
